# fs-s3

./: .bazelrc  .gitignore  .mocharc.yml  .npmignore  BUILD.bazel  README.md  WORKSPACE  common.package.json  custom-typings.d.ts  fs-s3-standalone.ts  index.html  index.ts  library.bzl  package-lock.json  package.bzl  package.json  publish.sh  tsconfig.json  tslint.json  typings.json  webpack.config.js  webpack.config.ts
.circleci/: config.yml
.github/workflows/: default.yml  master.yml  publish.yml
example/: index.html  standalone-example.html
fs-s3/: BUILD.bazel  abstract-file-service.ts  constructor-args.ts  constructor.ts  default-concurrency-options.ts  default-copy-options.ts  default-link-expiry-period.ts  default-write-options.ts  in-memory.ts  index.ts  memory-file-service.ts  mock-s3-file-service.spec.ts  mock-s3-file-service.ts  parse-s3-file.ts  poly-file-service.ts  resolve-destination-request.ts  s3-file-service.spec.ts  s3-file-service.ts  s3-file.ts  s3-key-parser.ts  s3-write-options.ts  scanned-s3-file.ts  to-s3-location-string.ts
fs-s3-core/: BUILD.bazel  concurrency-options.ts  content-info.ts  copy-options.ts  fp-optional.ts  generic-file-service.ts  index.ts  local-file.ts  output-request.ts  scanned.ts  scanner.ts  sleep.ts
fs-s3-node/: BUILD.bazel  any-file.ts  index.ts  is-s3-file.ts  local-file-service.spec.ts  local-file-service.ts  mock-local-file-service.ts  mock-node-file-service.ts  node-content-scanner.ts  node-file-service.spec.ts  node-file-service.ts  scanned-file.ts
fs-s3-test/: BUILD.bazel  file-sorter.ts  generate-tests.ts
package-builder/: BUILD.bazel  format_label.bzl  generate-registry-package-json.ts  index.bzl  local_deps.bzl  merge-json.ts  package_json.bzl  registry_deps.bzl  simple_cli.bzl
src/: any-file.ts  file-service.spec.ts  file-service.ts  fs-s3-standalone.ts  ifile-service.ts  index.ts  line-reader.ts  no.op.logger.ts  progress-listener.ts  s3-line-reader.ts  scanned-file.ts  write-options.ts
src/api/: abstract-file-service.ts  any-file.ts  async.iterator.ts  complete.ts  copy-operation.ts  copy-options.ts  copy-request.ts  default-concurrency-options.ts  default-copy-options.ts  default-write-options.ts  delete-options.ts  file-content.ts  fp.optional.ts  fs.error.ts  generic-file-service.ts  index.ts  input-request.ts  optional.ts  overwrite-options.ts  progress-listener.ts  resolve-destination-request.ts  s3-file.ts  scanned-file.ts  scanned-s3-file.ts  scanned.ts  write-options.ts  write-request.ts
src/file-service/: abstract-file-service.ts  arg-mapper.ts  file-parser.ts  fp-optional.ts  fp.optional.ts  generic-file-service.ts  index.ts  is-s3-file.ts  parse-path.ts  parsed-arg.ts  parsed-file.ts  parsed-input-request.ts  parsed-output-request.ts  parsed.ts  path-parser.ts  poly-file-service.ts  register-parser.ts  resolve-destination-request.ts
src/node/: index.ts  local-file-service.spec.ts  local-file-service.ts  local-path-parser.ts  node-file-service.spec.ts  node-file-service.ts  parse-local-file.ts  parsed-local-file.ts  path-stats.ts
src/s3/: default-content-type.ts  default-copy-options.ts  default-s3-write-options.ts  index.ts  parse-s3-file.ts  parsed-s3-file.ts  resolve-destination-request.ts  s3-copy-operation.ts  s3-copy-request.ts  s3-file-parser.ts  s3-file-service.spec.ts  s3-file-service.ts  s3-list-iterator.ts  s3-write-options.ts
src/web/: web-file-service.ts
test/: BUILD.bazel  dir-utils.ts  file-generator.ts  file-service-test.ts  file-service-tester.ts  file-sorter.ts  file.info.ts  generate-tests.ts  index.ts  local-s3-server.ts  test-config.json
tools/: index.bzl  library.bzl  local_package.bzl  module_name.bzl  package.bzl  test.bzl
