package(default_visibility = ["//visibility:public"])
load("//:library.bzl", "library")
load("//:package.bzl", "package")

lib_name = "fs-s3-core"

runtime_deps = [
    "@npm//fp-ts"
]

compile_deps = [
    "@npm//@types/node"
]

library(
    name = lib_name,
    srcs = glob(["*.ts"]),
    deps = compile_deps + runtime_deps
)

package(
    name = "package",
    lib_name = lib_name,
    deps = [lib_name],
    npm_deps = runtime_deps
)