package(default_visibility = ["//visibility:public"])
load("//tools:library.bzl", "library")
load("//tools:package.bzl", "package")

runtime_deps = [
    "@npm//fp-ts"
]

compile_deps = [
    "@npm//@types/node"
]

library(
    srcs = glob(["*.ts"]),
    deps = compile_deps + runtime_deps
)

package(
    npm_deps = runtime_deps
)