package(default_visibility = ["//visibility:public"])
load("//:library.bzl", "library")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")
load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//:package.bzl", "package")

all_sources = ["*.ts"]
tests = ["*.spec.ts"]

compile_deps = [
    "@npm//@types/node"
]

runtime_deps = [
    "@npm//aws-sdk",
    "@npm//mime",
    "@npm//mkdirp",
    "@npm//fp-ts",
    "//fs-s3-core",
    "//fs-s3"
]
lib_name = "fs-s3-node"
library(
    name = lib_name,
    srcs = glob(all_sources, exclude = tests),
    deps = runtime_deps + compile_deps
)

test_deps = [
    "@npm//get-port",
    "@npm//chai",
    "@npm//chai-as-promised",
    "@npm//@types/chai-as-promised",
    "@npm//@types/chai",
    "@npm//@types/jasmine",
    "@npm//jasmine",
    "@npm//axios",
    "//fs-s3-test"
]

ts_library(
    name = "test_lib",
    srcs = glob(tests),
    deps = [lib_name] + test_deps + runtime_deps
)

jasmine_node_test(
    coverage = True,
    name = "test",
    deps = ["test_lib"]
)

package(
    name = "package",
    lib_name = lib_name,
    deps = [lib_name],
    npm_deps = runtime_deps
)