package(default_visibility = ["//visibility:public"])
load("//tools:library.bzl", "library")
load("//tools:package.bzl", "package")
load("//tools:test.bzl", "test")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")
load("@npm_bazel_typescript//:index.bzl", "ts_library")


all_sources = ["*.ts"]
tests = ["*.spec.ts"]

compile_deps = [
    "@npm//@types/node"
]

runtime_deps = [
    "@npm//aws-sdk",
    "@npm//mime",
    "@npm//mkdirp",
    "@npm//fp-ts",
    "//fs-s3-core",
    "//fs-s3"
]

library(
    srcs = glob(all_sources, exclude = tests),
    deps = runtime_deps + compile_deps
)

test_deps = [
    "@npm//get-port",
    "@npm//chai",
    "@npm//chai-as-promised",
    "@npm//@types/chai-as-promised",
    "@npm//@types/chai",
    "@npm//@types/jasmine",
    "@npm//jasmine",
    "@npm//axios",
    "//fs-s3-test"
]

test(
    srcs = glob(tests),
    deps = test_deps + runtime_deps
)

package(
    name = "package",
    npm_deps = runtime_deps
)