package(default_visibility = ["//visibility:public"])
load("//tools:library.bzl", "library")
load("//tools:test.bzl", "test")
load("//tools:package.bzl", "package")

all_sources = ["*.ts"]
tests = ["*.spec.ts"]

compile_deps = [
    "@npm//@types/node"
]

runtime_deps = [
    "@npm//aws-sdk",
    "@npm//mime",
    "//fs-s3-core"
]

library(
    srcs = glob(all_sources, exclude = tests),
    deps = runtime_deps + compile_deps
)

test_deps = [
    "@npm//get-port",
    "@npm//chai",
    "@npm//chai-as-promised",
    "@npm//@types/chai-as-promised",
    "@npm//@types/chai",
    "@npm//@types/jasmine",
    "@npm//jasmine",
    "@npm//axios",
    "//test"
]

test(
    srcs = glob(tests),
    deps = test_deps + runtime_deps
)

package(
)