package(default_visibility = ["//visibility:public"])
load("//tools:library.bzl", "library")
load("//tools:package.bzl", "package")

runtime_deps = [
    "@npm//aws-sdk",
    "@npm//s3rver",
    "@npm//chai",
    "@npm//del",
    "@npm//fp-ts",
    "@npm//mime",
    "//fs-s3-core"
]

compile_deps = [
    "@npm//@types/jasmine",
    "@npm//@types/node",
]

library(
    srcs = glob(["*.ts"]),
    deps = compile_deps + runtime_deps
)

package()